# noir

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  TODO.md  appveyor.yml  clippy.toml
doc/: search-index.js
doc/implementors/noir/: trait.MockResource.js
doc/noir/: fn.request.html  fn.test.html  index.html  macro.form!.html  macro.headers!.html  macro.hyper_client!.html  macro.mocks!.html  macro.noir!.html  macro.query!.html  macro.responses!.html  sidebar-items.js  struct.ApiProvider.html  struct.HttpBody.html  struct.HttpFormData.html  struct.HttpHeader.html  struct.HttpQueryString.html  struct.HttpRequest.html  struct.HttpResponse.html  struct.MockResponseProvider.html  struct.Options.html  struct.Request.html  struct.RequestBody.html  struct.ResponseProvider.html  trait.Api.html  trait.HttpApi.html  trait.HttpEndpoint.html  trait.MockProvider.html  trait.MockRequest.html  trait.MockResource.html  trait.MockResponse.html  type.MockRequestResponse.html
doc/noir/api/: sidebar-items.js  struct.HttpRequest.html  struct.Request.html  trait.Api.html  trait.HttpApi.html
examples/api/: Cargo.toml  README.md
src/: lib.rs
src/api/: mod.rs  options.rs
src/mock/: mod.rs  provider.rs
src/util/: diff.rs  form.rs  json.rs  mod.rs  raw.rs
tests/: api.rs  base_test.rs  body.rs  cascading.rs  dump.rs  form.rs  form_test.md  headers.rs  method.rs  mock.rs  multiple.rs  query.rs  response_body.rs  response_dump.rs  response_header.rs  response_order.rs  response_query.rs  response_status.rs  responses.rs  status.rs
tools/: Cargo.toml  doc.rs  terminal.css
(+146 files in other folders)
