[package]
name = "noir"
version = "0.2.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]
description="rust based, DSL alike and request driven, black box testing library for HTTP APIs."
documentation = "https://bonsaiden.github.io/noir/doc/noir"
repository = "https://github.com/BonsaiDen/noir.git"
readme = "README.md"
keywords = [ "testing", "http", "api", "mock", "dsl"]
license="MIT/Apache-2.0"

[dependencies]
url = "1.2"
rand = "0.3"
json = "0.8"
hyper = "0.9"
colored = "1.3"
httparse = "1.1"
difference = "0.4"
lazy_static = "0.2"
clippy = { version = "*", optional = true }

[features]
lint = ["clippy"]

